k8s-traefik/hotel/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hotel
spec:
  selector:
    app: hotel
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
